// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuesViewer rendering when issues are not supplied 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.1;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  padding: 6px;
  -webkit-flex-basis: 100px;
  -ms-flex-preferred-size: 100px;
  flex-basis: 100px;
  overflow: auto;
  margin: 10px;
  border: 6px solid black;
  border-radius: 6px;
  box-shadow: 2px 2px 2px black;
  word-break: break-word;
}

<div
  class="c0"
>
  <div>
    CLICK ON A DOT TO LEARN ABOUT ISSUES...
  </div>
</div>
`;

exports[`IssuesViewer rendering when issues are supplied 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: initial;
  -webkit-justify-content: initial;
  -ms-flex-pack: initial;
  justify-content: initial;
  -webkit-align-items: initial;
  -webkit-box-align: initial;
  -ms-flex-align: initial;
  align-items: initial;
  opacity: 1;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  padding: 6px;
  -webkit-flex-basis: 100px;
  -ms-flex-preferred-size: 100px;
  flex-basis: 100px;
  overflow: auto;
  margin: 10px;
  border: 6px solid black;
  border-radius: 6px;
  box-shadow: 2px 2px 2px black;
  word-break: break-word;
}

<div
  class="c0"
>
  <div>
    <div>
      <b>
        a.b
      </b>
      : warn
    </div>
  </div>
</div>
`;
